ws_candid_parser/src/snapshots/ws_candid_parser__tests__compile_from_text.snap
---
source: src/main.rs
expression: result
---
// This is an experimental feature to generate Rust binding from Candid.
// You may want to manually adjust some of the types.
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
use ic_cdk::api::call::CallResult as Result;

candid::define_function!(pub FunctionType : (RequestArgsType) -> (
    ResponseType,
  ) query);
#[derive(CandidType, Deserialize)]
pub struct RequestArgsType(u64);

#[derive(CandidType, Deserialize)]
pub struct ResponseType { pub value: String, pub timestamp: u64 }


